--- a/package.json
+++ b/package.json
@@ -1,2 +1,11 @@
-npm init -y
-npm install express
+{
+  "name": "ncc-site",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
+}
